--- a/IDM-221/index.html
+++ b/IDM-221/index.html
@@ -6,7 +6,7 @@
         <title>Home</title>
         <link rel="stylesheet" href="CSS/base.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=chevron_right" />
         <style>
           @import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Aladin&family=Cantarell:ital,wght@0,400;0,700;1,400;1,700&family=Concert+One&family=Figtree:ital@0;1&family=Funnel+Display:wght@300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@@ -24,7 +24,7 @@
             </div>
             <div class="bigThree">
               <span class="material-icons baseWhite md-24" style="align-self: center">phone</span>
-              <i class="fa fa-instagram" style="font-size:24px;color: var(baseWhite); align-self: center"></i>
+              <i class="fa fa-instagram" style="font-size:24px; color: var(--baseWhite); align-self: center"></i>
               <div>
                 <span class="material-icons baseWhite md-48" id="menuIcon">menu</span>
               </div>
@@ -102,11 +102,10 @@
                   </section>
                   <div class="button">
                     <a href="about.html" class="button-link">
-                      <button><strong>Learn more</strong>
-                        <span class="material-symbols-outlined">
-                          chevron_right
-                          </span>
-                      </button>
+                      <strong>Learn more</strong>
+                      <span class="material-symbols-outlined">
+                        chevron_right
+                      </span>
                     </a>
                   </div>
                   
